WIP Add Toggle Blockquotes
Add command to toggle blockquotes.
Associated tests are a WIP.

--- a/package.json
+++ b/package.json
@@ -115,6 +115,11 @@
                 "command": "markdown.extension.editing.toggleCodeBlock",
                 "title": "%command.editing.toggleCodeBlock.title%",
                 "category": "Markdown All in One"
+            },
+            {
+                "command": "markdown.extension.editing.toggleBlockQuote",
+                "title": "%command.editing.toggleBlockQuote.title%",
+                "category": "Markdown All in One"
             }
         ],
         "keybindings": [
